refactor to simplify some code